--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -2,11 +2,11 @@
     display: flex;
     justify-content: center;
     color: #000000be;
-    height: calc(100vh - 4rem);
 }
 
 .login > div {
-    width: 70%;
+    width: 100%;
+    height: calc(100vh - 15rem);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -64,6 +64,7 @@
     color: #ffffff;
 }
 
-.login p {
+.login > div > p:last-child {
     width: 100%;
+    text-align: center;
 }
