--- a/src/styles/productsCard.css
+++ b/src/styles/productsCard.css
@@ -1,14 +1,87 @@
 .productsCard {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(15rem, auto));
+    margin-bottom: 2rem;
+    width: auto;
+    gap: 3rem;
+    margin-right: 2rem;
 }
 
 .productsCard > div {
-    height: 300px;
+    height: 350px;
+    border: 1px solid #dcd9d9;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 0.7rem;
+}
+
+.productsCard > div > b {
+    min-height: 3rem;
+    padding: 0 1rem;
+}
+
+.productsCard > div > div:nth-child(1) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+}
+
+.productsCard > div > div:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    border-top: 1px solid #dcd9d9;
+    margin-bottom: 1rem;
+    padding-top: 1rem;
+}
+
+.productsCard > div > div:nth-child(2) > div {
+    width: 100%;
+}
+
+.productsCard > div > div > div {
+    display: flex;
+}
+
+.productsCard > div > div > div > div {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.productsCard > div > div > div > button {
+    border-radius: 25px;
+    height: 50px;
+    width: 60px;
+    border: none;
+    background-color: #f85555;
+    color: #FFFFFF;
+    margin-right: 1rem;
+}
+
+.productsCard > div > div > div > div > b {
+    padding-left: 2rem;
+}
+
+.productsCard > div > div > div > div > span {
+    padding-left: 1rem;
 }
 
 .productsCard img {
-    width: 80%;
-    height: 80%;
+    position: absolute;
+    height: 20%;
+    width: 20%;
     object-fit: contain;
+    transition: transform 0.5s;
+}
+
+.productsCard img:hover {
+    transform: scale(1.1);
 }
