--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,12 +1,89 @@
 .sidebar {
     top: 4rem;
     position: fixed;
-    width: 15rem;
+    width: 20rem;
     background-color: #FFFFFF;
     z-index: 9999;
-    right: -15rem;
+    right: -20rem;
+    height: calc(100vh);
+    box-shadow: 0 15px 15px rgba(119, 119, 119, 0.534);
+    transition: right 0.5s;
+}
+
+.sidebar ul {
+    padding: 0 1rem;
+    overflow-y: scroll;
+    height: 24rem;
+}
+
+.sidebar li {
+    border-bottom: 1px solid #dcd9d9;
+    opacity: 1;
+    animation: fadeIn 0.5s;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
 
 .show {
  right: 0;
 }
+
+.sidebar button {
+    border: none;
+    background-color: transparent;
+    margin: 1rem;
+    color: #f85555;
+}
+
+.sidebar span {
+    padding: 0.3rem 1.5rem;
+    border: 1px solid #dcd9d9;
+    border-radius: 0.5rem;
+}
+
+.sidebar ul > li > div {
+    margin-top: 1rem;
+}
+
+h3 {
+    text-align: center;
+}
+
+.sidebar > ul > li > p:last-child {
+    text-align: end;
+}
+
+.sidebar > div {
+    display: grid;
+    grid-template-rows: 3fr 1fr;
+}
+
+.sidebar > div > div {
+    border-top: 1px solid #dcd9d9;
+    padding: 0.5rem;
+}
+
+.sidebar > div > div > button {
+    background-color: #f85555;
+    color: #FFFFFF;
+    padding: 1rem;
+    margin: 0;
+
+}
+
