--- a/src/styles/productDetail.css
+++ b/src/styles/productDetail.css
@@ -12,7 +12,6 @@
 
 .preview {
     width: 100%;
-    height: 100%;
     padding: 2rem;
     display: flex;
     justify-content: center;
@@ -24,15 +23,30 @@
     grid-template-columns: repeat(auto-fill, minmax(5rem, auto));
 }
 
-.galery img {
-    width: 5rem;
+.preview ul {
+    height: 100%;
+    width: 350px;
+    display: flex;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+.preview ul>li {
+    display: flex;
+    height: 350px;
+    min-width: 350px;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s;
 }
 
 .preview img {
-    width: 70%;
-
-    object-fit: fill;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
+
+
 
 .product-detail>p>span {
     color: #f85555;
@@ -48,3 +62,23 @@
 .product>div {
     border: 1px solid #000000;
 }
+
+.product .previous,
+.product .next {
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    border-radius: 50%;
+    height: 2.5rem;
+    width: 2.5rem;
+    background-color: #f85555;
+    margin: 1rem;
+    position: relative;
+    z-index: 99999999999;
+}
+
+.previous {}
+
+.next {}
