--- a/src/styles/productDetail.css
+++ b/src/styles/productDetail.css
@@ -19,8 +19,19 @@
 }
 
 .galery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(5rem, auto));
+    display: flex;
+    justify-content: center;
+}
+
+.galery > div {
+    width: 5rem;
+    height: 5rem;
+}
+
+.galery img {
+    height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
 
 .preview ul {
